--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <script>
         function generateRandomNumber() {
-            const numbers = [1, 2, 3, 4, 5, 6, 7, 9, 11, 12, 13, 15, 16, 17, 18, 19];
+            const numbers = [1, 2, 3, 4, 5, 6, 7, 11, 13, 15, 16, 17, 18, 19];
             const randomIndex = Math.floor(Math.random() * numbers.length);
             const randomNumber = numbers[randomIndex];
             document.getElementById('random-number').textContent = randomNumber;
