--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <button onclick="mostrarNombreAleatorio()">Mostrar Nombre</button>
 
     <script>
-        const nombres = ["Erik", "Silvia", "Antonio Casabona", "Aarón García", "Isabel", "Valentina", "Sebas", "Marta", "Sara", "Alex", "Luca", "Rosa", "Edurne", "Luis"];
+        const nombres = ["Erik", "Silvia", "Raúl", "Antonio Casabona", "Aarón García", "Isabel", "Valentina", "Sebas", "Marta", "Sara", "Alex", "Luca", "Rosa", "Edurne", "Luis"];
 
         function mostrarNombreAleatorio() {
             const indiceAleatorio = Math.floor(Math.random() * nombres.length);
